--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,11 @@ body,
   overflow-x: hidden;
 }
 * {
-  transition: height 0.3s ease-in-out;
-  transition: font-size 0.3s ease-in-out;
+  transition: all 0.5s ease, transition, width;
+}
+h2 {
+  margin: 0;
+  margin-bottom: 10px;
 }
 .flex {
   display: flex;
